--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,8 @@ pool:
 
 variables:
  buildConfiguration: 'Release'
+ dotNetFramework: 'net6.0'
+ dotNetVersion: '6.0.x'
 
 steps:
 - task: UseDotNet@2
